--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
+
+    <h1>Score: <span id="score">0</span></h1>
 </body>
 </html>
